# Machine-Learning-2

./: .gitignore  assignment-2.md  pyproject.toml
Assigment 1/: ML2_Assignment_Code.ipynb  SparseRandomProjections_v2.ipynb
Assignment 2/: ClusterMonster_v3.ipynb  ML_Assignment2_Code.ipynb  ML_Assignment2_task1.ipynb  Task2_Kernels.ipynb  kernel_results.csv  kernel_results_accuracy.csv
Assignment 2 /: Task1_Cluster.ipynb
Assignment 2/data/: lol_champions.csv  lol_meta.json
Assignment 3/: Task1_Regularization.ipynb  Task2_Classified_sequence.ipynb
Assignment 3/data/: highly_classified_data.csv
Assignment 5/: .gitignore  conftest.py
Assignment 5/data/eval/: comparison.csv  eval_dqn.json  eval_greedy.json  eval_ntuple.json  eval_random.json
Assignment 5/data/logs/: dqn.csv  ntuple.csv
Assignment 5/notebooks/: 01_environment_and_baselines.ipynb  02_dqn.ipynb  03_ntuple_td.ipynb  04_comparison_and_viewer.ipynb
Assignment 5/src/: __init__.py  encoding.py  env.py  moves.py  utils.py
Assignment 5/src/agents/: __init__.py  base.py  dqn.py  greedy_agent.py  ntuple.py  random_agent.py
Assignment 5/src/eval/: evaluate.py  report.py
Assignment 5/src/tests/: test_env.py
Assignment 5/src/training/: logger.py  train_dqn.py  train_ntuple.py
Assignment 5/src/viz/: dashboard.py  viewer.py
Assignment 5/writeup/: analysis.md
