[project]
name = "machine-learning-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pypandoc>=1.17",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torchvision>=0.26.0",
]
